--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "oracledb": "^6.9.0",
-    "sequelize": "^6.37.7"
+    "oracledb": "^6.9.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
