--- a/tsconfig.json
+++ b/tsconfig.json
@@ -96,5 +96,6 @@
 		// "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
 		"skipLibCheck": true /* Skip type checking all .d.ts files. */
 	},
-	"include": ["src/run-migrations.ts", "dist/migrations"]
+	"include": ["src", "src/run-migrations.ts", "dist/migrations"],
+  "exclude": ["node_modules"]
 }
