--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
+# DATABASE CONFIGURATION
 DB_USER=your_user
 DB_PASSWORD=your_password
 DB_HOST=localhost
 DB_PORT=1521
 DB_NAME=your_database_name
 DB_CONNECT_STRING=localhost/your_database_name
+
+# APP CONFIGURATION
+PORT=8080
